--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,35 @@
 /* CSS goes here */
 
 #editor {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+body {
+    height: 100%;
+    vertical-align: top;
+    width: 100%;
+}
+
+.mainPanel {
+    display: inline-block;
+    height: 100%;
+    vertical-align: top;
+}
+
+.gamePanel {
+    background: #2980b9;
+    display: inline-block;
+    height: 100%;
+    width: 59%;
+}
+
+.codingPanel {
+    background: #27ae60;
+    display: inline-block;
+    height: 100%;
+    width: 40%;
 }
