--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,8 @@
 /* CSS goes here */
 
 #editor {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    height: 100%;
+    position: relative;
 }
 
 body {
