--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,11 @@
 /* CSS goes here */
 
-#editor {
-    height: 100%;
-    position: relative;
-}
-
 body {
     height: 100%;
     vertical-align: top;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .mainPanel {
@@ -29,4 +26,29 @@ body {
     display: inline-block;
     height: 100%;
     width: 40%;
+}
+
+#editor {
+  width: 100%;
+  height: calc(100% - 50px);
+  font-size: 18px;
+}
+
+#editor_bar {
+  width: 100%;
+  height: 50px;
+  background-color: #4567b4;
+  position: relative;
+}
+
+#run {
+  height: 100%;
+  width: 120px;
+  text-align: middle;
+  color: white;
+  position: absolute;
+  right: 0;
+  background-color: #8999ef;
+  border: 0;
+  border-left: 5px solid #abcbff;
 }
