--- a/css/main.css
+++ b/css/main.css
@@ -47,18 +47,25 @@ body {
 #editor_bar {
   width: 100%;
   height: 50px;
-  background-color: #4567b4;
+  background-color: #202020;
   position: relative;
 }
 
 #run {
-  height: 100%;
-  width: 120px;
-  text-align: middle;
+  background-color: #2F3129;
+  border: 0;
+  border-left: 5px solid #2F3129;
   color: white;
+  cursor: pointer;
+  font-size: 16px;
+  height: 100%;
   position: absolute;
   right: 0;
-  background-color: #8999ef;
-  border: 0;
-  border-left: 5px solid #abcbff;
+  text-align: center;
+  transition: background-color 0.4s ease;
+  width: 120px;
+}
+
+#run:hover {
+    background-color: #2C2D26;
 }
