--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 body {
     height: 100%;
     margin: 0;
-    overflow-y: hidden;
+    overflow: hidden;
     padding: 0;
     vertical-align: top;
     width: 100%;
@@ -13,6 +13,7 @@ body {
     display: inline-block;
     height: 100%;
     vertical-align: top;
+    float: left;
 }
 
 .gamePanel {
@@ -20,7 +21,7 @@ body {
     display: inline-block;
     height: 100%;
     position: relative;
-    width: 59%;
+    width: 60%;
 }
 
 #gameCanvas {
