--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,44 @@ body {
     top: 0;
 }
 
+.gameMessagePanel {
+    background: rgba(0, 0, 0, 0.6);
+    bottom: 60px;
+    display: table;
+    height: 80px;
+    left: 15%;
+    position: absolute;
+    text-align: center;
+    width: 70%;
+}
+
+.gameMessageContainer {
+    display: table;
+    height: 80px;
+    position: relative;
+    width: 100%;
+}
+
+.speakerImage {
+    display: inline-block;
+    float: left;
+    height: 80px;
+    margin: 5px;
+    position: relative;
+}
+
+
+.gameMessage {
+    color: #fff;
+    display: table-cell;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 18px;
+    line-spacing: 24px;
+    text-align: center;
+    vertical-align: middle;
+    width: 100%;
+}
+
 .codingPanel {
     display: inline-block;
     height: 100%;
@@ -70,3 +108,4 @@ body {
 #run:hover {
     background-color: #2C2D26;
 }
+
