Refined game message styling

--- a/css/main.css
+++ b/css/main.css
@@ -38,13 +38,14 @@ body {
     bottom: 60px;
     display: table;
     height: 80px;
-    left: 15%;
+    left: 10%;
     position: absolute;
     text-align: center;
-    width: 70%;
+    width: 80%;
 }
 
 .gameMessageContainer {
+    color: #fff;
     display: table;
     height: 80px;
     position: relative;
@@ -61,14 +62,31 @@ body {
 
 
 .gameMessage {
-    color: #fff;
     display: table-cell;
     font-family: 'Press Start 2P', cursive;
-    font-size: 18px;
-    line-spacing: 24px;
+    font-size: 17px;
+    line-height: 24px;
+    padding: 0px 5%;
     text-align: center;
     vertical-align: middle;
     width: 100%;
+}
+
+.typed-cursor {
+    display: none;
+}
+
+.nextLevel {
+    display: none;
+    cursor: pointer;
+    height: 100%;
+    opacity: 0;
+    vertical-align: top;
+    width: 90px;
+}
+
+.nextLevel.shown {
+    display: table-cell;
 }
 
 .codingPanel {
