--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,11 @@ body {
   font-size: 18px;
 }
 
+#editor.disabled {
+  background-color: gray;
+  opacity: 0.7;
+}
+
 #editor_bar {
   width: 100%;
   height: 50px;
