--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /* CSS goes here */
 
 body {
+    font-family: 'Arial';
     height: 100%;
     margin: 0;
     overflow: hidden;
@@ -92,6 +93,7 @@ body {
 .codingPanel {
     display: inline-block;
     height: 100%;
+    position: relative;
     width: 40%;
 }
 
@@ -113,6 +115,29 @@ body {
   position: relative;
 }
 
+.editorOverlay {
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    display: none;
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    z-index: 500;
+}
+
+.editorOverlay.active {
+    display: table;
+}
+
+.editorOverlayCenter {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 #run {
   background-color: #2F3129;
   border: 0;
@@ -130,5 +155,47 @@ body {
 
 #run:hover {
     background-color: #2C2D26;
+}
+
+.loader,
+.loader:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+.loader {
+    margin: 60px auto;
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-left: 1.1em solid #ffffff;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
