--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,45 @@ body {
     width: 100%;
 }
 
+.splashscreen {
+    background: #999;
+    height: 100%;
+    left: 0;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 9999999999;
+}
+
+.splashJumboWelcome {
+    font-size: 80px;
+    position: absolute
+}
+
+.bossPanel {
+    background: white;
+    border: 2px solid #e74c3c;
+    border-radius: 8px;
+    top: 10px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    display: table;
+    height: 40px;
+    left: 10%;
+    position: absolute;
+    text-align: center;
+    width: 80%;
+}
+
+.healthBar {
+    background: #c0392b;
+    border-radius: 6px;
+    height: 100%;
+    width: 100%;
+}
+
 .mainPanel {
     display: inline-block;
     height: 100%;
