--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,41 @@ body {
     width: 100%;
 }
 
+.messageOverlay {
+    background: rgba(0, 0, 0, 0.7);
+    color: #efefef;
+    font-family: 'Press Start 2P', cursive;
+    height: 100%;
+    width: 100%;
+    display: none;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 5000000000000000;
+    transition: opacity 0.8s ease;
+}
+
+.messageOverlay.visible {
+    display: block;
+    opacity: 1;
+}
+
+.messageOverlay h1 {
+    font-size: 56px;
+    margin-top: 250px;
+}
+
+.messageOverlay h2 {
+    font-size: 38px;
+    margin-top: 6%;
+}
+
+
 .splashscreen {
     background-image: url('http://i307.photobucket.com/albums/nn288/el-ementrix/handpainted_wall2.jpg');
     color: #e1e1e1;
