--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,32 @@ body {
     width: 460px;
 }
 
+.stagePanel {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 20px;
+    height: 50px;
+    line-height: 50px;
+    width: 240px;
+}
+
+.stagePanel .previousLevel {
+    display: none;
+    float: left;
+    height: 100%;
+    top: 0;
+    vertical-align: top;
+    width: 50px;
+}
+
+.stagePanel .previousLevel.enabled {
+    display: inline-block;
+}
+
+.stagePanel .stageNumber {
+    float: left;
+    margin-left: 12px;
+}
+
 .bossPanel {
     background: rgba(233, 233, 233, 0.9);
     border: 2px solid #e74c3c;
